src/objects/Payment_Method__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Icon_Link__c</fullName>
        <label>Icon Link</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Only_Updeposited_Payment_Method__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Only Undeposited Payment Method</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Surcharge_Applicable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Surcharge Applicable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Order_Number__c</fullName>
        <label>Order Number</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Surcharge_Percentage__c</fullName>
        <label>Surcharge Percentage</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Undeposited_Funds__c</fullName>
        <description>This field is used to assign an Undeposited Funds GL account to each of the payment methods</description>
        <label>Undeposited Funds</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Payment Method</label>
    <listViews>
        <fullName>Detailed</fullName>
        <columns>NAME</columns>
        <columns>Is_Active__c</columns>
        <columns>Order_Number__c</columns>
        <columns>Icon_Link__c</columns>
        <columns>Undeposited_Funds__c</columns>
        <filterScope>Everything</filterScope>
        <label>Detailed</label>
    </listViews>
</CustomObject>